Fixed match webpage input textbox overflowing smartphone width. Fixed some details webpage text not visible on mobile Firefox because bottom URL bar covered it. Added test case for orders move into check because of asserting piece that was actually correctly implemented.

--- a/web/details.css
+++ b/web/details.css
@@ -38,3 +38,7 @@ a:visited {
 a:link {
     color: rgb(200,200,255);
 }
+
+#bottomspacer {
+    height: 100px;
+}
